13-currency-conversion-horizontal-scaling/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: currency-conversion
  name: currency-conversion
  namespace: default
spec:
  replicas: 2
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-conversion
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-conversion
    spec:
      containers:
      - image: lalitrnagpal/13-currency-conversion-horizontal-scaling:0.0.1-RELEASE       
        imagePullPolicy: IfNotPresent
        name: currency-conversion
#        env: //CHANGE
#          - name: CURRENCY_EXCHANGE_URI
#            value: http://currency-exchange
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: currency-conversion
  name: currency-conversion
  namespace: default
spec:
  ports:
  - # nodePort: 30701 
    port: 9100 
    protocol: TCP
    targetPort: 9100 
  selector:
    app: currency-conversion
  sessionAffinity: None 
  type: NodePort
